Deleted unneeded library